Fixing alignment issues

--- a/ui/css/src/host-admin.scss
+++ b/ui/css/src/host-admin.scss
@@ -63,7 +63,7 @@
 }
 
 .ginger .host-admin hr {
-    width: 93%;
+    width: 100%;
     border: 1.8px solid #eaeaea;
     margin-top: 30px !important;
 }
@@ -646,13 +646,19 @@
 	height:250px;
 	overflow-y:scroll;
 	position:absolute;
-	width:100%;
+	width:98.6%;
 }
 
  tr {
 	width:100% ;
 	display:inline-table;
 	}
+}
+.bootgrid-header {
+  div.search{
+   margin:0;
+   width:160px;
+  }
 }
 // Admin - To do: move to Ginger
 @import "modules/administration";
